# northeastern_compilers

./: README.md
terminal/: Makefile  anf.ml  compile.ml  design_notes.txt  desugar.ml  dune  dune-project  errors.ml  exprs.ml  ls.txt  main.c  notes_on_field_data.txt  pretty.ml  register_allocation.ml  rename_and_tag.ml  runner.ml  test.ml  test_funcs.ml  tests_for_records.ml  tests_free_vars.ml  tests_from_cobra.ml  tests_from_diamondback.ml  tests_from_fdl.ml  tests_from_racer.ml  well_formed.ml
terminal/input/do_pass/: final_record.trinket  lambda_seq.trinket  many_fields.out  many_fields.term
trinket/: Makefile  README.md  add_valgrind_option.py  anf.ml  assembly.ml  compile.ml  desugar.ml  dune  dune-project  errors.ml  exprs.ml  gc.h  lexer.mll  main.c  naive_stack_allocation.ml  parser.mly  phases.ml  pretty.ml  register_allocation.ml  rename_and_tag.ml  test.ml  tests_for_input.ml  tests_for_records.ml  tests_for_tables.ml  tests_from_cobra.ml  tests_from_diamondback.ml  tests_from_eggeater.ml  tests_from_racer.ml  util.ml  well_formed.ml
trinket/input/do_err/: README  add_lambda.err  add_lambda.trinket  het_table.trinket  same_fields.err  same_fields.trinket  seq_desugar.err  table_of_table.err  table_of_table.trinket
trinket/input/do_pass/: README  bound_record.out  bound_record.trinket  empty_table.out  empty_table.trinket  even_odd.trinket  fdl0.trinket  fdl2.trinket  fdl3.trinket  fib.trinket  final_record.out  final_record_runtime_equal.trinket  final_runtime_equal.trinket  lambda_takes_lambda.trinket  many_fields.out  mutual_rec.trinket  sum.trinket  (+14 more)
(+153 files in other folders)
